<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fifteenDP"
        android:background="@color/colorBackground"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photo"
            android:padding="@dimen/tenDP"
            android:layout_width="@dimen/eightyDP"
            android:layout_height="@dimen/twoHundredDP"
            android:layout_marginEnd="@dimen/fifteenDP"
            android:background="@color/colorWhite"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/beer_dummy" />

        <LinearLayout
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/tenDP"
            tools:ignore="InefficientWeight">

            <TextView
                android:id="@+id/name"
                style="@style/TitleFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Name" />

            <TextView
                android:id="@+id/tagline"
                style="@style/SubTitleFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="tagline" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twentyDP"
                android:background="@drawable/shape_data_item"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/SubTitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fiveDP"
                    android:text="@string/first_brewed" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fiveDP"
                    android:src="@drawable/calendar_today_24px"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/firstBrewed"
                    style="@style/SubTitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/tenDP"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fiveDP"
                    android:src="@drawable/local_bar_24px"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/avb"
                    style="@style/SubTitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/twentyDP"
                    android:text="" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fiveDP"
                    android:src="@drawable/light_mode_24px"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/attenuationLevel"
                    style="@style/SubTitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/twentyDP"
                    android:text="" />

                <TextView
                    style="@style/SubTitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fiveDP"
                    android:textStyle="bold"
                    android:text="@string/ph" />

                <TextView
                    android:id="@+id/ph"
                    style="@style/SubTitleFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/isFavorite"
            android:layout_width="@dimen/fiftyDP"
            android:layout_height="@dimen/fiftyDP"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            android:background="@drawable/like_beer"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>